Fix 'grids' from spilling out from 'container' Changed height of container to account for top-margin

--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ body {
 
 .container {
     position: relative;
-    height: 960px;
+    height: 1020px;
     width: 960px;
     margin: auto;
     margin-top: 5rem;    
     padding: 0;
     outline: .30rem solid black;
+    border: none;
 
 }
 
